manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    name: nginx
    app: csi-cephfsplugin
spec:
  containers:
  - name: nginx
    image: nginx
