manifests/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: webhook
  namespace: rook-upgrade
spec:
  selector:
    app: webhook
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
