manifests/mutatingwebhook.yaml
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: rook-upgrade-webhook
webhooks:
  - name: webhook.rook-upgrade.svc
    admissionReviewVersions:
    - v1
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: In
        values: ["rook-ceph"]
    objectSelector:
      matchExpressions:
      - key: app
        operator: In
        values: ["csi-rbdplugin", "csi-cephfsplugin"]
    failurePolicy: Ignore
    matchPolicy: Equivalent
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - pods
      scope: '*'
    sideEffects: NoneOnDryRun
    timeoutSeconds: 30
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZKekNDQXcrZ0F3SUJBZ0lVVEozY0tBU29jNHhQZlpSMXFMeExaNnFBYk84d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0l6RWhNQjhHQTFVRUF3d1lkMlZpYUc5dmF5NXliMjlyTFhWd1ozSmhaR1V1YzNaak1CNFhEVEl5TURVdwpNakV5TXpneE4xb1hEVEl6TURVd01qRXlNemd4TjFvd0l6RWhNQjhHQTFVRUF3d1lkMlZpYUc5dmF5NXliMjlyCkxYVndaM0poWkdVdWMzWmpNSUlDSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DQWc4QU1JSUNDZ0tDQWdFQXVjL0EKcE55UTFzUXVFSG9iYTYxQTRQKy9XVEtnRHRYcmdTNm1YWkN5MjZyM1gzQWl0TDM0N0w1N2NHYXVBemNWbWlMWAoycUVQcXVzRkZk [...]
      service:
        namespace: rook-upgrade
        name: webhook
        path: /mutate
